# RUsh

./: BUILD.md  BUILDING  Cargo.toml  FAQ  Imakefile  LICENSE  README.build.txt  README.md  RUN-SHELL.md  csh-mode.el  patchlevel.h  sh.c  tcsh.man.new
crates/: README.md
crates/rsh-ansi-term/: Cargo.toml  README.md
crates/rsh-ansi-term/examples/: 256_colors.rs  basic_colors.rs  gradient_colors.rs  rgb_colors.rs
crates/rsh-ansi-term/src/: ansi.rs  debug.rs  display.rs  lib.rs  style.rs
crates/rsh-cli/: Cargo.toml  README.md
crates/rsh-cli/src/: app.rs  cli.rs  keybinding.rs  lib.rs
crates/rsh-command/: Cargo.toml
crates/rsh-completion/: Cargo.toml
crates/rsh-data/: Cargo.toml
crates/rsh-engine/: Cargo.toml  README.md
crates/rsh-errors/: Cargo.toml
crates/rsh-json/: Cargo.toml
crates/rsh-parser/: Cargo.toml
crates/rsh-path/: Cargo.toml
crates/rsh-plugin/: Cargo.toml
crates/rsh-pretty-hex/: Cargo.toml
crates/rsh-protocol/: Cargo.toml
crates/rsh-source/: Cargo.toml
crates/rsh-stream/: Cargo.toml
crates/rsh-table/: Cargo.toml
crates/rsh-test-support/: Cargo.toml
crates/rsh-value-ext/: Cargo.toml
crates/rsh_plugin_binaryview/: Cargo.toml
crates/rsh_plugin_chart/: Cargo.toml
crates/rsh_plugin_fetch/: Cargo.toml
crates/rsh_plugin_from_bson/: Cargo.toml
crates/rsh_plugin_from_mp4/: Cargo.toml
crates/rsh_plugin_from_sqlite/: Cargo.toml
crates/rsh_plugin_inc/: Cargo.toml
crates/rsh_plugin_match/: Cargo.toml
crates/rsh_plugin_post/: Cargo.toml
crates/rsh_plugin_ps/: Cargo.toml
crates/rsh_plugin_query_json/: Cargo.toml
crates/rsh_plugin_s3/: Cargo.toml
crates/rsh_plugin_selector/: Cargo.toml
crates/rsh_plugin_start/: Cargo.toml
crates/rsh_plugin_sys/: Cargo.toml
crates/rsh_plugin_textview/: Cargo.toml
crates/rsh_plugin_to_bson/: Cargo.toml
crates/rsh_plugin_to_sqlite/: Cargo.toml
crates/rsh_plugin_tree/: Cargo.toml
crates/rsh_plugin_xpath/: Cargo.toml
docs/commands/: to-toml.md
src/: main.rs
