[package]
authors = ["Morales Research Corporation"]
description = "CLI for rsh"
edition = "2021"
license = "BSD-3"
name = "rsh-cli"
version = "3.0.0"
build = "build.rs"

[lib]
doctest = false

[dependencies]
rsh-completion = { version="3.0.0", path="../rsh-completion" }
rsh-command = { version="3.0.0", path="../rsh-command" }
rsh-data = { version="3.0.0", path="../rsh-data" }
rsh-engine = { version="3.0.0", path="../rsh-engine" }
rsh-errors = { version="3.0.0", path="../rsh-errors" }
rsh-parser = { version="3.0.0", path="../rsh-parser" }
rsh-protocol = { version="3.0.0", path="../rsh-protocol" }
rsh-source = { version="3.0.0", path="../rsh-source" }
rsh-stream = { version="3.0.0", path="../rsh-stream" }
rsh-ansi-term = { version="3.0.0", path="../rsh-ansi-term" }

indexmap ="1.6.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
strip-ansi-escapes = "0.1.0"
rustyline = { version="8.1.0", optional=true }
ctrlc = { version="3.1.7", optional=true }
shadow-rs = { version="0.5", default-features=false, optional=true }
serde = { version="1.0.123", features=["derive"] }
serde_yaml = "0.8.16"

[build-dependencies]
shadow-rs = "0.5"

[features]
default = ["shadow-rs"]
rustyline-support = ["rustyline", "rsh-engine/rustyline-support"]
stable = []
