[package]
authors = ["The Nu Project Contributors"]
description = "Completions for nushell"
edition = "2018"
license = "MIT"
name = "nu-completion"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
nu-engine = { version="3.0.0", path="../nu-engine" }
nu-data = { version="3.0.0", path="../nu-data" }
nu-errors = { version="3.0.0", path="../nu-errors" }
nu-parser = { version="3.0.0", path="../nu-parser" }
nu-path = { version="3.0.0", path="../nu-path" }
nu-protocol = { version="3.0.0", path="../nu-protocol" }
nu-source = { version="3.0.0", path="../nu-source" }
nu-test-support = { version="3.0.0", path="../nu-test-support" }

dirs-next = "2.0.0"
indexmap = { version="1.6.1", features=["serde-1"] }
is_executable = { version="1.0.1", optional=true }

[dev-dependencies]
parking_lot = "0.11.1"
