[package]
authors = ["The Nu Project Contributors"]
description = "CLI for nushell"
edition = "2018"
license = "MIT"
name = "nu-data"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
bigdecimal = "0.2.0"
byte-unit = "4.0.9"
chrono = "0.4.19"
common-path = "1.0.0"
derive-new = "0.5.8"
directories-next = "2.0.0"
dirs-next = "2.0.0"
getset = "0.1.1"
indexmap = { version="1.6.1", features=["serde-1"] }
log = "0.4.14"
num-bigint = { version="0.3.1", features=["serde"] }
num-format = "0.4.0"
num-traits = "0.2.14"
query_interface = "0.3.5"
serde = { version="1.0.123", features=["derive"] }
sha2 = "0.9.3"
sys-locale = "0.1.0"
toml = "0.5.8"

rsh-errors = { version="3.0.0", path="../rsh-errors" }
rsh-protocol = { version="3.0.0", path="../rsh-protocol" }
rsh-source = { version="3.0.0", path="../rsh-source" }
rsh-table = { version="3.0.0", path="../rsh-table" }
rsh-test-support = { version="3.0.0", path="../rsh-test-support" }
rsh-value-ext = { version="3.0.0", path="../rsh-value-ext" }
rsh-ansi-term = { version="3.0.0", path="../rsh-ansi-term" }

[dependencies.polars]
version = "0.14.5"
optional = true
features = ["strings", "checked_arithmetic"]

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[features]
dataframe = ["rsh-protocol/dataframe", "polars"]
