[package]
authors = ["The Nu Project Contributors"]
description = "Nushell stream"
edition = "2018"
license = "MIT"
name = "nu-stream"
version = "3.0.0"

[dependencies]
nu-errors = { version="3.0.0", path="../nu-errors" }
nu-protocol = { version="3.0.0", path="../nu-protocol" }
nu-source = { version="3.0.0", path="../nu-source" }

futures = { version="0.3.12", features=["compat", "io-compat"] }

[features]
stable = []
trace = []
