[package]
authors = ["The Nu Project Contributors"]
description = "Extension traits for values in Nushell"
edition = "2018"
license = "MIT"
name = "nu-value-ext"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }

indexmap = { version="1.6.1", features=["serde-1"] }
itertools = "0.10.0"
num-traits = "0.2.14"

[features]
dataframe = ["nu-protocol/dataframe"]
