[package]
authors = ["The Nu Project Contributors"]
description = "A plugin to display charts"
edition = "2018"
license = "MIT"
name = "nu_plugin_chart"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
nu-data = { path="../nu-data", version="3.0.0" }
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-plugin = { path="../nu-plugin", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }
nu-value-ext = { path="../nu-value-ext", version="3.0.0" }

crossterm = "0.19.0"
tui = { version="0.14.0", default-features=false, features=["crossterm"] }
