[package]
authors = ["The Nu Project Contributors"]
description = "A version incrementer plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_inc"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-plugin = { path="../nu-plugin", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }
nu-test-support = { path="../nu-test-support", version="3.0.0" }
nu-value-ext = { path="../nu-value-ext", version="3.0.0" }

semver = "0.11.0"

[build-dependencies]
