[package]
authors = ["The Nu Project Contributors"]
description = "A process list plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_ps"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-plugin = { path="../nu-plugin", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }

num-bigint = "0.3.1"

futures = { version="0.3.12", features=["compat", "io-compat"] }
futures-timer = "3.0.2"
sysinfo = "0.16.5"

[build-dependencies]
