[package]
authors = ["The Nu Project Contributors"]
description = "An S3 plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_s3"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
futures = { version="0.3.12", features=["compat", "io-compat"] }
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-plugin = { path="../nu-plugin", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }
s3handler = "0.6.3"

[build-dependencies]
