[package]
authors = ["The Nu Project Contributors"]
description = "Tree viewer plugin for Nushell"
edition = "2018"
license = "MIT"
name = "nu_plugin_tree"
version = "3.0.0"

[lib]
doctest = false

[dependencies]
derive-new = "0.5.8"
nu-errors = { path="../nu-errors", version="3.0.0" }
nu-plugin = { path="../nu-plugin", version="3.0.0" }
nu-protocol = { path="../nu-protocol", version="3.0.0" }
nu-source = { path="../nu-source", version="3.0.0" }
ptree = "0.3.1"

[build-dependencies]
